--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -16,3 +16,5 @@ jobs:
       - run: git config --global user.email '${{ secrets.GH_EMAIL }}' 
       - run: npm version patch -m "[RELEASE] %s"
       - run: git push
+      - run: git tag
+      - run: git push --tags
