--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "fxgcomponents_ladia001",
   "version": "1.0.15",
   "description": "React Components",
-  "main": "./lib/index.js",
+  "main": "./lib/src/index.js",
   "files": [
-    "/dist"
+    "/lib"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
